DEVELOP: Add Server project

--- a/client/src/app/list-management/todo-listing/todo-listing.component.html
+++ b/client/src/app/list-management/todo-listing/todo-listing.component.html
@@ -1,3 +1,18 @@
-<p>
-  todo-listing works!
-</p>
+<section class="todo">
+    <ul class="todo-controls">
+        <li><a href="index.html" class="icon-add">Add</a></li>
+        <li><a href="index.html" class="icon-delete">Delete</a></li>
+        <li class="right"><a href="index.html" class="icon-settings">Settings</a></li>
+    </ul>
+
+    <ul class="todo-list">
+        <li class="done"><a href="index.html" class="toggle">Toggle</a> Find an idea.</li>
+        <li><a href="index.html" class="toggle">Toggle</a> Build it!</li>
+        <li><a href="index.html" class="toggle">Toggle</a> Ship it...<br>with a line break!</li>
+    </ul>
+
+    <ul class="todo-pagination">
+        <li class="previous"><span><i class="icon-previous"></i> Previous</span></li>
+        <li class="next"><a href="index.html">Next <i class="icon-next"></i></a></li>
+    </ul>
+</section>
