DEVELOP: add authentication in FE

--- a/client/src/app/list-management/todo-listing/todo-listing.component.html
+++ b/client/src/app/list-management/todo-listing/todo-listing.component.html
@@ -6,6 +6,7 @@
     </ul>
 
     <ul class="todo-list">
+        <li *ngFor="item of todoItems"><a href="index.html" class="toggle">Toggle</a> Build it!</li>
         <li class="done"><a href="index.html" class="toggle">Toggle</a> Find an idea.</li>
         <li><a href="index.html" class="toggle">Toggle</a> Build it!</li>
         <li><a href="index.html" class="toggle">Toggle</a> Ship it...<br>with a line break!</li>
